:sparkles:  Feat: 동행 제목, 동행 상태 변경
-동행 제목 수정
-동행 상태 변경(진행중 -> 종료)
-동행 상태 변경(종료->진행중)

Ref: #126